--- a/style.css
+++ b/style.css
@@ -13,12 +13,27 @@ body{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background-image: url(background.jpg);
-    background-size: cover;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    /*background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
 }
+
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}*/
 
 .card{
     position: absolute;
+    left: 100px;
     width: 480px;
     color: #fff;
     background: rgba(0, 0, 0, 0.43);
