--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);}
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+}
     /*background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
