--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(#e66465, #9198e5);
+
 }
     /*background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -34,7 +35,8 @@ body{
 
 .card{
     position: absolute;
-    width: 480px;
+    left: -15px;
+    width: 25%;
     color: #fff;
     background: rgba(0, 0, 0, 0.43);
     border-radius: 1rem;
@@ -50,12 +52,12 @@ body{
     text-align: center;
     user-select: none;
     padding: 1.5rem;
-    border-bottom: 1px solid #ffffff20;
+    border-bottom: 1px solid #ffffff;
 }
 
 .card .card-body{
     padding: 1.5rem;
-    border-bottom: 1px solid #ffffff20;
+    border-bottom: 1px solid #ffffff;
 }
 
 .card .card-body .logo{
@@ -107,8 +109,8 @@ body{
 }
 
 .card footer button.youtube{
-    background-color: #f44336;
-    color: #801313;
+    background-color: #3682f4;
+    color: #ffffff;
 }
 
 .card footer button.youtube:hover, .card footer button.reset:hover{
@@ -169,3 +171,6 @@ body{
     font-family: "Rubik", sans-serif;
     font-weight: 500;
 }
+img {
+    border-radius: 5%;
+  }
